--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@types/react": "^16.9.53",
     "@types/react-blockies": "^1.4.0",
     "@types/react-dom": "^16.9.8",
+    "@types/react-infinite-scroller": "^1.2.1",
     "blockies": "0.0.2",
     "ethers": "^4.0.48",
     "react": "^17.0.1",
     "react-blockies": "^1.4.1",
     "react-dom": "^17.0.1",
+    "react-infinite-scroller": "^1.2.4",
     "react-scripts": "4.0.0",
     "react-spinners": "^0.9.0",
     "typescript": "^4.0.3",
